Hide btn_jump after pressed. Add pulse animation to btn_jump. Fixed uiGroups getting mutated

--- a/www/css/InLevel.css
+++ b/www/css/InLevel.css
@@ -59,6 +59,7 @@
     bottom: 5%;
     width: 10.7vw;
     height: 10.7vw;
+    animation: pulse 800ms infinite;
 }
 
 #ui_timerBox {
